--- a/css/hamburger.sass
+++ b/css/hamburger.sass
@@ -24,7 +24,7 @@
 
 .menu-toggle-line
   position: absolute
-  background: $red
+  background: $textBlack
   display: block
   margin: auto
   height: 4px
@@ -64,7 +64,7 @@
   -moz-transition: opacity 0.2s ease 0s, transform 0.2s ease 0s, -moz-transform 0.2s ease 0s
 
 .adaptive-menu-toggle--open .menu-toggle-line
-  background: $red
+  background: $textBlack
 
 .adaptive-menu-toggle--open .menu-toggle-line--1
   width: 0
@@ -94,7 +94,7 @@
   -o-transition: opacity 0.2s ease 0.4s, -o-transform 0.2s ease 0.4s
   -moz-transition: opacity 0.2s ease 0.4s, transform 0.2s ease 0.4s, -moz-transform 0.2s ease 0.4s
 
-@media only screen and (max-width: 640px)
+@media only screen and (max-width: 1200px)
   .header__hamburger
     display: block !important
     position: absolute
@@ -102,29 +102,38 @@
     top: 20px
 
   .headerNav_adaptive
-    background: $greyBg
+    background: $textBlack
     display: none
     padding-top: 60px
     position: absolute
+    left: -15px
+    right: -15px
     top: 0
     +transform(translateX(-100%))
-    width: 100%
     z-index: 3
+
+    ul
+      list-style: none
+      margin: 0
+      padding: 0
+
+    .address p
+      @include font($textBlack)
+      background: $white
+      padding: 10px
 
   .header_opened
     display: block !important
     +transform(translateX(0))
 
-  .headerNav__items_adaptive a
-    background: $greyBg
+  .headerNav_adaptive a
+    background: $white
     border: $textBlack 1px solid
     border-bottom: none
-    color: $red
     display: block
-    font-family: "Museo Sans Cyrl -300", sans-serif
-    font-size: 17px
+    @include font($textBlack)
     padding: 10px
     text-decoration: none
 
-  .headerNav__items_adaptive li:last-child a
+  .headerNav_adaptive li:last-child a
     border-bottom: $textBlack 1px solid
