--- a/css/style.sass
+++ b/css/style.sass
@@ -1,9 +1,16 @@
+/* LIBS */
+
 @import "variables"
 @import "prefixes"
 
-
-
+/* BLOCKS */
+@import "general"
+@import "blocks/header"
+@import "blocks/footer"
 @import "hamburger"
+
+/* PAGES */
+@import "pages/main"
 
 /* RESPONSIVE */
 @import "responsive"
