--- a/css/variables.sass
+++ b/css/variables.sass
@@ -1,31 +1,25 @@
 //@font-face
-//  font-family: Proxima
-//  src: url(../fonts/PROXIMA_NOVA_REGULAR.OTF)
+//  font-family: Nat Flight
+//  src: url(../fonts/Nat_Flight.otf)
 //
 //@font-face
-//  font-family: ProximaBold
-//  src: url(../fonts/PROXIMA_NOVA_BOLD.OTF)
+//  font-family: Nat Bold
+//  src: url(../fonts/Nat_Flight_Bold.otf)
 //
 //@font-face
-//  font-family: ProximaLight
-//  src: url(../fonts/PROXIMA_NOVA_CONDENSED_LIGHT.OTF)
+//  font-family: PT
+//  src: url(../fonts/PTSans-Regular.ttf)
 //
 //@font-face
-//  font-family: ProximaSemibold
-//  src: url(../fonts/PROXIMA_NOVA_SEMIBOLD.OTF)
+//  font-family: BCH
+//  src: url(../fonts/BCH56.ttf)
 
 //  COLORS
 $textBlack: #000000
 $white: #ffffff
 
-//  SIZES
-$fontSize: 18px
-$mBottom: 70px
-
-// RESPONSIVE SIZES
-
 //  FONTS
 $regular: sans-serif
-//$bold: ProximaBold, sans-serif
-//$light: ProximaLight, sans-serif
-//$semibold: ProximaSemibold, sans-serif
+//$bold: Nat Bold, sans-serif
+//$pt: PT, sans-serif
+//$bch: BCH, sans-serif
