--- a/css/prefixes.sass
+++ b/css/prefixes.sass
@@ -1,5 +1,3 @@
-@import "variables"
-
 =transform($transform)
   -moz-transform: $transform
   -ms-transform: $transform
@@ -15,18 +13,61 @@
 =space()
   display: flex
   justify-content: space-between
+  flex-wrap: wrap
+
+=space-nw()
+  display: flex
+  justify-content: space-between
 
 =top()
   display: flex
   justify-content: space-between
   align-items: flex-start
 
+=round()
+  border-radius: 50%
+
+=cover()
+  -o-object-fit: cover
+  object-fit: cover
+
+=fit($fit)
+  -o-object-fit: $fit
+  object-fit: $fit
+
+=full()
+  width: 100%
+  height: 100%
+  -o-object-fit: cover
+  object-fit: cover
+
+=border-radius($radius)
+  -webkit-border-radius: $radius
+  -moz-border-radius: $radius
+  border-radius: $radius
+
+=box()
+  -moz-box-sizing: border-box
+  -webkit-box-sizing: border-box
+  box-sizing: border-box
+
+=box-sizing($box-sizing)
+  -moz-box-sizing: $box-sizing
+  -webkit-box-sizing: $box-sizing
+  box-sizing: $box-sizing
+
+=transition()
+  -moz-transition: all 0.4s ease 0s
+  -o-transition: all 0.4s ease 0s
+  -webkit-transition: all 0.4s ease 0s
+  transition: all 0.4s ease 0s
+
 //  MIXIN
-@mixin font($color: $textBlack, $family: $regular, $weight: normal, $size: $fontSize, $line: 1)
+@mixin font($color: $textBlack, $family: $regular, $weight: 400, $size: 22px, $line: 1.5)
   font:
     size: $size
-    weight: $weight
     family: $family
+    weight: $weight
   color: $color
   line-height: $line
 
@@ -36,21 +77,7 @@
   -webkit-transition: $transition
   transition: $transition
 
-@mixin box-sizing($box-sizing: border-box)
-  -moz-box-sizing: $box-sizing
-  -webkit-box-sizing: $box-sizing
-  box-sizing: $box-sizing
-
 @mixin box-shadow($shadow: 0 0 10px rgba(0, 0, 0, 0.17))
   -webkit-box-shadow: $shadow
   -moz-box-shadow: $shadow
   box-shadow: $shadow
-
-@mixin object-fit($object: cover)
-  -o-object-fit: $object
-  object-fit: $object
-
-@mixin border-radius($radius: 50%)
-  -webkit-border-radius: $radius
-  -moz-border-radius: $radius
-  border-radius: $radius
