--- a/css/style.sass
+++ b/css/style.sass
@@ -1,4 +1,6 @@
 /* LIBS */
+@import "libs/slick"
+@import "libs/jquery.fancybox.min.css"
 
 @import "variables"
 @import "prefixes"
@@ -7,6 +9,7 @@
 @import "general"
 @import "blocks/header"
 @import "blocks/footer"
+@import "blocks/modals"
 @import "hamburger"
 
 /* PAGES */
