--- a/css/variables.sass
+++ b/css/variables.sass
@@ -1,25 +1,35 @@
-//@font-face
-//  font-family: Nat Flight
-//  src: url(../fonts/Nat_Flight.otf)
-//
-//@font-face
-//  font-family: Nat Bold
-//  src: url(../fonts/Nat_Flight_Bold.otf)
-//
-//@font-face
-//  font-family: PT
-//  src: url(../fonts/PTSans-Regular.ttf)
-//
-//@font-face
-//  font-family: BCH
-//  src: url(../fonts/BCH56.ttf)
+@font-face
+  font-family: ProximaNova
+  src: url(../fonts/ProximaNova-Regular.ttf)
+  font-weight: 400
+
+@font-face
+  font-family: ProximaNova
+  src: url(../fonts/ProximaNova-Semibold.ttf)
+  font-weight: 600
+
+@font-face
+  font-family: ProximaNova
+  src: url(../fonts/ProximaNova-Bold.ttf)
+  font-weight: 700
+
+@font-face
+  font-family: ProximaNova
+  src: url(../fonts/ProximaNova-Extrabld.ttf)
+  font-weight: 800
+
 
 //  COLORS
 $textBlack: #000000
+$gray: #8E8E8E
+$lightGray: #c4c4c4
+$lightestGray: #F3F3F3
 $white: #ffffff
+$blue: #1378BA
+$green: #29B179
 
 //  FONTS
-$regular: sans-serif
+$regular: ProximaNova, sans-serif
 //$bold: Nat Bold, sans-serif
 //$pt: PT, sans-serif
 //$bch: BCH, sans-serif
