--- a/css/general.sass
+++ b/css/general.sass
@@ -1,47 +1,107 @@
 body
+  margin: 0
   max-width: 100%
   overflow-x: hidden
   display: flex
   flex-direction: column
-  @include font()
-  margin: 0
+  font-family: ProximaNova, sans-serif
 
   .wrapper
+    margin: 0 auto
     max-width: 1330px
     padding: 0 15px
     +box
-    margin: 0 auto
 
     &_fullHD
-      max-width: 1920px
       margin: 0 auto
+      max-width: 1920px
       position: relative
+    &_right
+      margin: 0 0 0 auto
+      padding-left: 15px
+      max-width: 1625px
+
+h1, h2, h3, h4, h5
+  margin: 0
+
+h2.title, h3.title
+  margin-top: 80px
+  @include font($textBlack, 800, 64px, 1.1)
 
 p
   margin: 0
 
+a
+  color: inherit
+  text-decoration: none
+
+ul
+  padding: 0
+  margin: 0
+  list-style: none
+
+.blue
+  color: $blue
+
+.green
+  color: $green
+
 .innerTitle
-  @include font($textBlack, $regular, 400, 72px, 1)
+  @include font($textBlack, 400, 72px, 1)
   margin: 0 0 70px
 
 .subtitle
-  @include font($textBlack, $regular, 400, 220px, 1)
+  @include font($textBlack, 400, 220px, 1)
   position: absolute
   z-index: -1
   top: -15px
 
 .btn
-  display: inline-flex
-  padding: 0 55px
-  @include font($white, $regular, 400, 18px, 55px)
+  display: inline-block
+  @include font($white, 400, 18px, 1)
   white-space: nowrap
-  text-decoration: none
   +transition
-  +border-radius(30px)
+  +border-radius(24px)
   +box
+  z-index: inherit
 
   &:hover
     +transition
+
+  &__content
+    margin: 2px
+    color: $textBlack
+    background-color: $lightGray
+  &_transperent
+    padding: 0 20px
+    background: inherit
+    border: 3px solid $blue
+    @include font($textBlack, 700, 24px)
+    @include transition(border 0.3s)
+    &:hover
+      border-color: $green
+  &_gradient
+    padding: 26px 55px
+    +border-radius(35px)
+    background: linear-gradient(to right, $blue, $green)
+  &_arrowR::after
+    margin-left: 40px
+    content: url("../images/arrow_btn.svg")
+  &_round
+    width: 40px
+    height: 40px
+    background: #ffffff
+    +round
+    +center
+
+  &_services
+    align-self: flex-end
+    font-size: 18px
+    font-weight: 800
+    &::before
+      margin-right: 15px
+      content: url("../images/get_consult.svg")
+
 
 .slick-slide
   &:focus
@@ -94,3 +154,25 @@ p
 
   &.slick-prev
     right: 90px
+
+.line_white
+  z-index: 10
+  border-bottom: 1px solid #ffffff
+
+.title
+  &__h1_main
+    margin-bottom: 40px
+    padding-bottom: 40px
+    position: relative
+    @include font($textBlack, 800, 64px, 1)
+    border-bottom: 1px solid #9999994a
+    +box
+    &::after
+      content: " "
+      position: absolute
+      display: block
+      bottom: -2px
+      left: 40px
+      width: 50px
+      height: 3px
+      background: #1378BA
