--- a/css/variables.sass
+++ b/css/variables.sass
@@ -22,6 +22,7 @@
 //  COLORS
 $textBlack: #000000
 $gray: #8E8E8E
+$notSoLightGray: #A3A3A3
 $lightGray: #c4c4c4
 $lightestGray: #F3F3F3
 $white: #ffffff
