--- a/css/pages/main.sass
+++ b/css/pages/main.sass
@@ -100,6 +100,10 @@
           top: 0
         &:hover .services__image-block::before
           background: rgba(19, 120, 186, 0.9)
+        &:hover .btn_round
+          background: #ffffff
+        &:hover .btn_round>svg>path
+          fill: $blue
 
 
         &__title
@@ -194,6 +198,7 @@
       font-weight: 600
 
 .portfolio
+  +flex-column
   &_main
     margin-top: 80px
     padding-top: 90px
@@ -201,6 +206,41 @@
     & .title
       margin: 0
       text-align: center
+  &__list
+    margin-top: 95px
+    display: grid
+    grid-gap: 20px
+    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr))
+  &__img
+    max-height: 500px
+    +border-radius(10px)
+    z-index: 20
+  &__item
+    +flex-column
+    position: relative
+    color: #ffffff
+    &__text
+      z-index: 30
+      &-container
+        position: absolute
+        left: 50px
+        bottom: 45px
+        &::before
+          content: url("../images/evonik.png")
+      &__title
+        margin-top: 30px
+        font-size: 26px
+        font-weight: 800
+        line-height: 1.25
+
+      &__info
+        margin-top: 20px
+        font-size: 20px
+        line-height: 1.4
+  & .btn_white
+    margin: 105px auto
+
+
 
 .copyright
   &__block
