--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,9 @@ body .wrapper_right {
   padding-left: 15px;
   max-width: 1625px;
 }
+body .wrapper_half {
+  max-width: 650px;
+}
 
 h1, h2, h3, h4, h5 {
   margin: 0;
@@ -181,6 +184,10 @@ ul {
   color: #A3A3A3;
 }
 
+.white {
+  color: #ffffff;
+}
+
 .innerTitle {
   font-size: 72px;
   font-weight: 400;
@@ -206,10 +213,10 @@ ul {
   color: #ffffff;
   line-height: 1;
   white-space: nowrap;
-  -moz-transition: all 0.4s ease 0s;
-  -o-transition: all 0.4s ease 0s;
-  -webkit-transition: all 0.4s ease 0s;
-  transition: all 0.4s ease 0s;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   -webkit-border-radius: 24px;
   -moz-border-radius: 24px;
   border-radius: 24px;
@@ -217,12 +224,13 @@ ul {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   z-index: inherit;
+  cursor: pointer;
 }
 .btn:hover {
-  -moz-transition: all 0.4s ease 0s;
-  -o-transition: all 0.4s ease 0s;
-  -webkit-transition: all 0.4s ease 0s;
-  transition: all 0.4s ease 0s;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 .btn__content {
   margin: 2px;
@@ -231,8 +239,7 @@ ul {
 }
 .btn_transperent {
   margin-bottom: 13px;
-  padding: 9px 20px 8px;
-  display: flex;
+  padding: 8px 22px 6px;
   align-items: flex-start;
   background: inherit;
   border: 3px solid #1378BA;
@@ -273,11 +280,13 @@ ul {
 }
 .btn_arrowR::after {
   margin-left: 40px;
-  content: url("../images/arrow_btn.svg");
+  content: url("../images/arrow_white_btn.svg");
+  vertical-align: middle;
 }
 .btn_phone-icon::before {
-  margin-right: 10px;
+  margin-right: 6px;
   content: url("../images/phone_grey.svg");
+  vertical-align: middle;
 }
 .btn_round {
   width: 40px;
@@ -288,6 +297,25 @@ ul {
   justify-content: center;
   align-items: center;
 }
+.btn_round_light-blue {
+  background: #2984C0;
+}
+.btn_round_white {
+  background: #ffffff;
+}
+.btn_submit {
+  padding: 25px 40px;
+  font-size: 16px;
+  font-weight: 800;
+  letter-spacing: 1px;
+  -webkit-border-radius: 36px;
+  -moz-border-radius: 36px;
+  border-radius: 36px;
+}
+.btn_submit_white {
+  background: inherit;
+  border: 2px solid #ffffff;
+}
 .btn_services {
   align-self: flex-end;
   font-size: 18px;
@@ -296,6 +324,28 @@ ul {
 .btn_services::before {
   margin-right: 15px;
   content: url("../images/get_consult.svg");
+}
+.btn_small {
+  padding: 17px 30px;
+  font-size: 12px;
+  font-weight: 800;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  border-radius: 25px;
+  letter-spacing: 1px;
+}
+.btn_small_white {
+  border: none;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+.btn_blue {
+  color: #1378BA;
+  border: 2px solid #DDE7ED;
+}
+.btn__delete-file {
+  margin-left: 8px;
+  background: none;
+  border: none;
 }
 
 .slick-slide:focus {
@@ -327,44 +377,44 @@ ul {
   -moz-border-radius: 6px;
   border-radius: 6px;
   opacity: 0.2;
-  -moz-transition: all 0.4s ease 0s;
-  -o-transition: all 0.4s ease 0s;
-  -webkit-transition: all 0.4s ease 0s;
-  transition: all 0.4s ease 0s;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 .slick-dots li button:focus {
   outline: none;
 }
 .slick-dots li.slick-active button {
-  -moz-transition: all 0.4s ease 0s;
-  -o-transition: all 0.4s ease 0s;
-  -webkit-transition: all 0.4s ease 0s;
-  transition: all 0.4s ease 0s;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   width: 100%;
   background: linear-gradient(to right, #1378BA, #29B179);
   opacity: 1;
 }
 
 .slick-arrow {
+  position: absolute;
+  top: calc(50% - 100px);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  cursor: pointer;
   border: none;
   background: none;
-  position: absolute;
-  cursor: pointer;
-  top: -190px;
 }
 .slick-arrow:focus {
   outline: none;
 }
 .slick-arrow.slick-next {
-  right: 0;
-  -moz-transform: rotate(180deg);
-  -ms-transform: rotate(180deg);
-  -o-transform: rotate(180deg);
-  -webkit-transform: rotate(180deg);
-  transform: rotate(180deg);
+  right: -180px;
 }
 .slick-arrow.slick-prev {
-  right: 90px;
+  left: -180px;
 }
 
 .line_white {
@@ -372,6 +422,17 @@ ul {
   border-bottom: 1px solid #ffffff;
 }
 
+.line_gray {
+  z-index: 10;
+  border-bottom: 1px solid #EFEFF2;
+}
+
+.title__h1 {
+  font-size: 58px;
+  font-weight: 800;
+  color: #000000;
+  line-height: 1;
+}
 .title__h1_main {
   margin-bottom: 40px;
   padding-bottom: 40px;
@@ -396,6 +457,32 @@ ul {
   background: #1378BA;
 }
 
+.breadcrumbs {
+  margin-top: 15px;
+  font-size: 15px;
+  font-weight: 400;
+}
+.breadcrumbs a {
+  margin-right: 10px;
+  color: #000000;
+}
+.breadcrumbs a::after {
+  margin-left: 10px;
+  content: url(../images/arrow_gray.svg);
+  vertical-align: middle;
+}
+.breadcrumbs span {
+  color: #8E8E8E;
+  text-decoration: underline;
+}
+.breadcrumbs__list {
+  display: flex;
+  justify-content: center;
+}
+
+.header {
+  background: url(../images/bg_header_common.jpg) center top no-repeat;
+}
 .header_main {
   background: url(../images/bag_header_main.jpg) center top no-repeat;
 }
@@ -407,12 +494,15 @@ ul {
   font-size: 24px;
   line-height: 1.5;
 }
+.header_main__content__right-block .btn_gradient {
+  margin-top: 55px;
+}
 .header_main__links {
   margin-top: 120px;
 }
 .header_main__links_portfolio {
-  margin: 50px 0 -10px;
-  padding: 30px 100px 100px 38px;
+  margin: 60px 0 -10px;
+  padding: 30px 26px 35px 38px;
   background-color: #1378BA;
   font-size: 24px;
   font-weight: 800;
@@ -420,6 +510,9 @@ ul {
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
+}
+.header_main__links_portfolio .btn {
+  margin: 20px 0 0 auto;
 }
 .header__top {
   display: flex;
@@ -431,11 +524,8 @@ ul {
   display: flex;
 }
 .header__top__nav-item {
-  padding: 2em 1em;
+  padding: 3em 1em;
   position: relative;
-}
-.header__top__nav-item:hover .header__top__nav-link::before {
-  width: calc(100% - 3em);
 }
 .header__top__nav-link {
   padding: 1em 0.5em;
@@ -451,7 +541,7 @@ ul {
   height: 3px;
   left: 1.5em;
   width: 0;
-  background: #1378BA;
+  background: linear-gradient(to left, #29B179, #1378BA);
   -moz-transition: all 0.3s;
   -o-transition: all 0.3s;
   -webkit-transition: all 0.3s;
@@ -462,7 +552,7 @@ ul {
   transition: all 0.3s ease-in-out;
 }
 .header__top__nav-link:hover::before {
-  background: linear-gradient(to left, #29B179, #1378BA);
+  width: calc(100% - 3em);
 }
 .header__top__right-block {
   display: flex;
@@ -476,31 +566,48 @@ ul {
   display: flex;
 }
 .header__nav-list_bottom_main {
-  padding: 0 30px;
   flex-direction: column;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
   background: #efeff2;
 }
-.header__nav-list_bottom_main li {
-  padding: 15px 0;
+.header__nav-list_bottom_common {
+  margin: 10px 0;
+  justify-content: space-between;
+}
+.header__nav-list_bottom_common .header__nav-list__link {
+  padding: 5px 0;
 }
 .header__nav-list__link {
-  padding: 10px 0;
+  padding: 22px 30px;
+  display: block;
+  border-radius: 10px;
   font-weight: 800;
   white-space: nowrap;
+  background: inherit;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 .header__nav-list__link svg {
   margin-right: 13px;
   vertical-align: middle;
+}
+.header__nav-list__link:hover {
+  color: #1378BA;
+  background: #ffffff;
+}
+.header__nav-list__link:hover svg path {
+  fill: #1378BA;
 }
 
 .logo {
   position: relative;
 }
 .logo__text {
-  padding: 7px 12px;
+  padding: 8px 12px 6px;
   position: absolute;
   bottom: 10px;
   right: -90px;
@@ -512,9 +619,21 @@ ul {
   text-transform: uppercase;
 }
 
+.work-time {
+  font-size: 15px;
+}
+.work-time::before {
+  margin-right: 6px;
+  content: url(../images/icon_clock_grey.svg);
+  vertical-align: middle;
+}
+
 .footer {
   padding: 60px 0 65px;
   background: url("../images/bg_footer.jpg") no-repeat;
+}
+.footer .logo__text {
+  border-radius: 12px;
 }
 .footer .wrapper {
   display: flex;
@@ -554,6 +673,37 @@ ul {
 }
 .footer__nav__link:hover svg circle {
   opacity: 1;
+}
+.footer__contacts__item:not(:first-child) {
+  margin: 0 0 13px 33px;
+  max-width: 270px;
+  position: relative;
+  line-height: 20px;
+}
+.footer__contacts__item::before {
+  position: absolute;
+  left: -33px;
+}
+.footer__contacts__item:nth-child(2)::before {
+  content: url(../images/icon_clock_color.svg);
+}
+.footer__contacts__item:nth-child(3)::before, .footer__contacts__item .contacts__item_address::before {
+  content: url(../images/icon_location_color.svg);
+}
+.footer__contacts__item:last-child::before, .footer__contacts__item .contacts__item_email::before {
+  content: url(../images/icon_mail_color.svg);
+}
+
+.copyright__block {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  font-size: 15px;
+  line-height: 24px;
+}
+
+.policy {
+  color: #1378BA;
 }
 
 .modal--callback {
@@ -629,10 +779,8 @@ ul {
 
 .form-input {
   width: 100%;
-  font-size: 40px;
-  font-weight: 16px;
-  color: #000000;
-  line-height: 1.5;
+  color: #ffffff;
+  font-size: 18px;
   margin-bottom: 20px;
   padding: 0 10px;
   border: none;
@@ -914,6 +1062,9 @@ ul {
 .services__item {
   position: relative;
   overflow: hidden;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
 }
 .services__item__title {
   margin-bottom: 20px;
@@ -947,6 +1098,8 @@ ul {
 }
 .services__info {
   padding: 30px;
+  display: flex;
+  flex-direction: column;
 }
 .services__info__list__item {
   font-size: 18px;
@@ -973,13 +1126,14 @@ ul {
   height: 100%;
   display: flex;
 }
+.services__info .btn_small {
+  margin-top: 25px;
+}
 .services_main .services {
   margin-top: 70px;
 }
 .services_main .services__info {
   position: absolute;
-  display: flex;
-  flex-direction: column;
   left: 0;
   right: 0;
   top: 220px;
@@ -1032,6 +1186,23 @@ ul {
   -o-transition: background 0.5s;
   -webkit-transition: background 0.5s;
   transition: background 0.5s;
+}
+.services_page .services {
+  margin-top: 60px;
+}
+.services_page .services__item {
+  background-color: #F3F3F3;
+}
+.services_page .services__item__title {
+  font-size: 30px;
+  font-weight: 800;
+  color: #1378BA;
+  line-height: 1.15;
+}
+.services_page .services__image-block {
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
 }
 
 .bg-text {
@@ -1088,14 +1259,49 @@ ul {
   max-width: 45%;
 }
 
+.s_staff_service-page {
+  margin-top: 100px;
+}
+
 .staff {
   background: url("../images/bg_paper.jpg") no-repeat top left;
 }
+.staff .title {
+  max-width: 810px;
+}
 .staff__text {
   padding: 10px 0 85px;
+  display: flex;
+  align-items: center;
+}
+.staff__text__sertif {
+  margin-left: 200px;
+}
+.staff__text__sertif svg {
+  padding-top: 90px;
+  margin-bottom: 30px;
+}
+.staff__text__sertif p {
+  font-size: 18px;
+  font-weight: 600;
+  color: #333333;
+  line-height: 1.5;
+}
+.staff__text__link {
+  color: #1378BA;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.staff__text__link:hover {
+  color: #29B179;
+}
+.staff__list {
+  margin: 0 -10px;
 }
 .staff__item {
-  display: inline-flex;
+  margin: 0 10px;
 }
 .staff__item__link {
   display: flex;
@@ -1142,7 +1348,7 @@ ul {
 .portfolio_main {
   margin-top: 80px;
   padding-top: 90px;
-  background: url("../images/bg_portfolio.jpg") no-repeat top left;
+  background: url("../images/bg_portfolio.jpg") no-repeat bottom right;
 }
 .portfolio_main .title {
   margin: 0;
@@ -1190,12 +1396,147 @@ ul {
   line-height: 1.4;
 }
 .portfolio .btn_white {
-  margin: 105px auto;
+  margin: 100px auto 180px;
+}
+.portfolio__pagination {
+  margin-top: 75px;
+  padding-bottom: 80px;
+  display: flex;
+  justify-content: center;
+}
+.portfolio__pagination__list {
+  display: flex;
+}
+.portfolio__pagination__list li {
+  margin-right: 15px;
+}
+.portfolio__pagination__btn {
+  width: 45px;
+  height: 45px;
+  background: #F3F3F3;
+  border: none;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+}
+.portfolio__pagination__btn.active {
+  background: #29B179;
+  color: #ffffff;
+}
+.portfolio__pagination__prev, .portfolio__pagination__next {
+  border: none;
+  background: none;
+}
+.portfolio__pagination__prev {
+  margin-right: 100px;
+}
+.portfolio__pagination__next {
+  margin-left: 100px;
 }
 
-.copyright__block {
+.s_contacts {
+  margin-top: -85px;
+}
+
+.contacts_main {
+  display: flex;
+}
+.contacts_main__left-block, .contacts_main__right-block {
+  width: 50%;
+}
+.contacts_main__left-block {
+  background: url("../images/bg_form_main.jpg") no-repeat;
+}
+.contacts_main__left-block h3 {
+  margin: 60px 0 40px;
+  font-size: 40px;
+  font-weight: 800;
+  line-height: 1.35;
+}
+.contacts_main__left-block .wrapper_half {
+  margin-left: auto;
+}
+.contacts_main__left-block .form-input {
+  background-color: inherit;
+  border: none;
+}
+.contacts__list {
+  margin: 130px 0 65px 90px;
+}
+.contacts__item {
+  font-size: 22px;
+  line-height: 1.4;
+}
+.contacts__item::before {
+  margin-right: 12px;
+  vertical-align: middle;
+}
+.contacts__item_address::before {
+  content: url(../images/icon_location_color.svg);
+}
+.contacts__item_email::before {
+  content: url(../images/icon_mail_color.svg);
+}
+.contacts__phone {
+  font-size: 40px;
+  font-weight: 800;
+}
+.contacts__phone::before {
+  content: url("../images/icon_phone_color.svg");
+}
+
+.form__added-file {
+  margin-left: 35px;
+  display: inline-block;
+  color: #ffffff;
+}
+
+.s_partners {
+  margin-top: 85px;
+}
+
+.partners {
+  margin-top: 85px;
+  background: url("../images/bg_partners.jpg") no-repeat center top;
+}
+.partners__list {
+  margin: 80px -10px 0 -10px;
+}
+.partners__item {
+  margin: 0 10px;
+  background-color: #ffffff;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.partners__item__wrapper {
+  padding: 25px;
+  height: 235px;
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.partners__link {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1.5;
+  text-align: center;
+}
+.partners__img {
+  margin: auto 0;
+  max-width: 100%;
+  object-fit: contain;
+}
+
+.content__header {
+  margin-top: 35px;
+  text-align: center;
 }
 
 /* RESPONSIVE */
