--- a/css/variables.sass
+++ b/css/variables.sass
@@ -21,6 +21,7 @@
 
 //  COLORS
 $textBlack: #000000
+$darkGray: #333333
 $gray: #8E8E8E
 $notSoLightGray: #A3A3A3
 $lightGray: #c4c4c4
@@ -31,6 +32,3 @@ $green: #29B179
 
 //  FONTS
 $regular: ProximaNova, sans-serif
-//$bold: Nat Bold, sans-serif
-//$pt: PT, sans-serif
-//$bch: BCH, sans-serif
