--- a/css/blocks/modals.sass
+++ b/css/blocks/modals.sass
@@ -55,7 +55,8 @@
 
 .form-input
   width: 100%
-  @include font($textBlack, 16px, 40px)
+  color: #ffffff
+  font-size: 18px
   margin-bottom: 20px
   padding: 0 10px
   border: none
