--- a/css/general.sass
+++ b/css/general.sass
@@ -11,7 +11,6 @@ body
     max-width: 1330px
     padding: 0 15px
     +box
-
     &_fullHD
       margin: 0 auto
       max-width: 1920px
@@ -20,6 +19,8 @@ body
       margin: 0 0 0 auto
       padding-left: 15px
       max-width: 1625px
+    &_half
+      max-width: 650px
 
 h1, h2, h3, h4, h5
   margin: 0
@@ -49,6 +50,9 @@ ul
 .grey
   color: $notSoLightGray
 
+.white
+  color: #ffffff
+
 .innerTitle
   @include font($textBlack, 400, 72px, 1)
   margin: 0 0 70px
@@ -67,7 +71,7 @@ ul
   +border-radius(24px)
   +box
   z-index: inherit
-
+  cursor: pointer
   &:hover
     +transition
 
@@ -77,8 +81,7 @@ ul
     background-color: $lightGray
   &_transperent
     margin-bottom: 13px
-    padding: 9px 20px 8px
-    display: flex
+    padding: 8px 22px 6px
     align-items: flex-start
     background: inherit
     border: 3px solid $blue
@@ -101,17 +104,31 @@ ul
       color: $green
   &_arrowR::after
     margin-left: 40px
-    content: url("../images/arrow_btn.svg")
+    content: url("../images/arrow_white_btn.svg")
+    vertical-align: middle
   &_phone-icon::before
-    margin-right: 10px
+    margin-right: 6px
     content: url("../images/phone_grey.svg")
+    vertical-align: middle
   &_round
     width: 40px
     height: 40px
     background: $blue
     +round
     +center
-
+    &_light-blue
+      background: #2984C0
+    &_white
+      background: #ffffff
+  &_submit
+    padding: 25px 40px
+    font-size: 16px
+    font-weight: 800
+    letter-spacing: 1px
+    +border-radius(36px)
+    &_white
+      background: inherit
+      border: 2px solid #ffffff
   &_services
     align-self: flex-end
     font-size: 18px
@@ -119,6 +136,22 @@ ul
     &::before
       margin-right: 15px
       content: url("../images/get_consult.svg")
+  &_small
+    padding: 17px 30px
+    font-size: 12px
+    font-weight: 800
+    +border-radius(25px)
+    letter-spacing: 1px
+    &_white
+      border: none
+      background-color: rgba(255, 255, 255, 0.2)
+  &_blue
+    color: $blue
+    border: 2px solid #DDE7ED
+  &__delete-file
+    margin-left: 8px
+    background: none
+    border: none
 
 
 .slick-slide
@@ -157,40 +190,73 @@ ul
         opacity: 1
 
 .slick-arrow
+  position: absolute
+  top: calc(50% - 100px)
+  @include transform(translateY(-50%))
+  cursor: pointer
   border: none
   background: none
-  position: absolute
-  cursor: pointer
-  top: -190px
 
   &:focus
     outline: none
 
   &.slick-next
-    right: 0
-    +transform(rotate(180deg))
+    right: -180px
 
   &.slick-prev
-    right: 90px
+    left: -180px
 
 .line_white
   z-index: 10
   border-bottom: 1px solid #ffffff
 
+.line_gray
+  z-index: 10
+  border-bottom: 1px solid #EFEFF2
+
 .title
-  &__h1_main
-    margin-bottom: 40px
-    padding-bottom: 40px
-    position: relative
-    @include font($textBlack, 800, 64px, 1)
-    border-bottom: 1px solid #9999994a
-    +box
+  &__h1
+    @include font($textBlack, 800, 58px, 1)
+    &_main
+      margin-bottom: 40px
+      padding-bottom: 40px
+      position: relative
+      @include font($textBlack, 800, 64px, 1)
+      border-bottom: 1px solid #9999994a
+      +box
+      &::after
+        content: " "
+        position: absolute
+        display: block
+        bottom: -2px
+        left: 40px
+        width: 50px
+        height: 3px
+        background: #1378BA
+
+.breadcrumbs
+  margin-top: 15px
+  font-size: 15px
+  font-weight: 400
+  //&::after
+  //  margin-top: 20px
+  //  content: ""
+  //  vertical-align: middle
+  //  height: 3px
+  //  width: 60px
+  //  background-color: $blue
+  a
+    margin-right: 10px
+    color: #000000
     &::after
-      content: " "
-      position: absolute
-      display: block
-      bottom: -2px
-      left: 40px
-      width: 50px
-      height: 3px
-      background: #1378BA
+      margin-left: 10px
+      content: url(../images/arrow_gray.svg)
+      vertical-align: middle
+  span
+    color: $gray
+    text-decoration: underline
+  &__list
+    display: flex
+    justify-content: center
+
+
